[gd_scene load_steps=7 format=3 uid="uid://b5mvge1h8x421"]

[ext_resource type="Texture2D" uid="uid://bibc4dr53ufg5" path="res://assets/menu/buttons/Play/Default@3x.png" id="1_lgp46"]
[ext_resource type="Script" uid="uid://c3ob34o4h5orm" path="res://menu/pause_menu.gd" id="1_yvytn"]
[ext_resource type="Texture2D" uid="uid://bet7nkp3f4hs4" path="res://assets/menu/buttons/Home/Default@3x.png" id="2_5ijvr"]
[ext_resource type="Texture2D" uid="uid://co58hff7jsi4d" path="res://assets/menu/buttons/Levels/Default@3x.png" id="3_5ijvr"]
[ext_resource type="Texture2D" uid="uid://caid3ic2mufpo" path="res://assets/menu/buttons/Repeat/Default@3x.png" id="3_yvytn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rl6v5"]
bg_color = Color(0, 0, 0, 0.509804)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yvytn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Panel" type="Panel" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_rl6v5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 779.0
offset_top = 120.0
offset_right = 1141.0
offset_bottom = 291.0
theme_override_colors/font_color = Color(0.752941, 0.0901961, 0.25098, 1)
theme_override_font_sizes/font_size = 125
text = "Pause"
metadata/_edit_use_anchors_ = true

[node name="Play" type="Button" parent="CanvasLayer"]
offset_left = 1313.0
offset_top = 416.0
offset_right = 1561.0
offset_bottom = 664.0
icon = ExtResource("1_lgp46")
metadata/_edit_use_anchors_ = true

[node name="Restart" type="Button" parent="CanvasLayer"]
offset_left = 995.0
offset_top = 416.0
offset_right = 1243.0
offset_bottom = 664.0
icon = ExtResource("3_yvytn")
metadata/_edit_use_anchors_ = true

[node name="Levels" type="Button" parent="CanvasLayer"]
offset_left = 677.0
offset_top = 416.0
offset_right = 925.0
offset_bottom = 664.0
icon = ExtResource("3_5ijvr")
metadata/_edit_use_anchors_ = true

[node name="Home" type="Button" parent="CanvasLayer"]
offset_left = 359.0
offset_top = 416.0
offset_right = 607.0
offset_bottom = 664.0
icon = ExtResource("2_5ijvr")
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="CanvasLayer"]
position = Vector2(960, 540)

[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="CanvasLayer/Home" to="." method="_on_home_pressed"]
